--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
     "@vue/eslint-config-standard": "^3.0.0-beta.15",
+    "file-loader": "^1.1.11",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "url-loader": "^1.0.1",
+    "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.16"
   },
   "browserslist": [
